change var names

--- a/views/ticketAdmin.pug
+++ b/views/ticketAdmin.pug
@@ -11,7 +11,7 @@ block layout-content
         p   Here is the information that #{name} send you.
         ul.list
             li Name: 
-            li.formInfo #{fullName}
+            li.formInfo #{name}
                 li Email: 
                 li.formInfo #{email}
                 li Coverage
