--- a/views/ticketCustomer.pug
+++ b/views/ticketCustomer.pug
@@ -9,10 +9,10 @@ block layout-content
             img(src='https://images.unsplash.com/photo-1609220136736-443140cffec6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')
         div.one-col
             h1 Thanks For Choosing Me
-            p  Hello, #{fullName} we just receive your message. I wanted to thank you for chosse me as an option for your problem. Here is the information that you send me.
+            p  Hello, #{name} we just receive your message. I wanted to thank you for chosse me as an option for your problem. Here is the information that you send me.
             ul.list
                 li Name: 
-                li.formInfo #{fullName}
+                li.formInfo #{name}
                 li Email: 
                 li.formInfo #{email}
                 li Coverage
